control de acceso
se agrega la tresticcion de aceso segun los niveles definidos

--- a/PruebaBig_WIllianCuartas/Views/Autentication/login.cshtml
+++ b/PruebaBig_WIllianCuartas/Views/Autentication/login.cshtml
@@ -1,6 +1,13 @@
 ﻿@model PruebaBig_WIllianCuartas.Models.MUser
 
-<form method="post" asp-action="login" asp-controller="Autenticacion">
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-@TempData["Message_type"]">
+        @TempData["Message"]
+    </div>
+}
+
+<form method="post" asp-action="login" asp-controller="Autentication">
 
     <h1>
         Login de usuario
