--- a/PruebaBig_WIllianCuartas/Views/Shared/_Layout.cshtml
+++ b/PruebaBig_WIllianCuartas/Views/Shared/_Layout.cshtml
@@ -13,43 +13,45 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PruebaBig_WIllianCuartas</title>
+    <title>@ViewData["Title"] Clima DDB</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PruebaBig_WIllianCuartas.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PruebaBig_WIllianCuartas</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Forecast" asp-action="Index">Home</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <h4>-@UserName-</h4>
-                                                        
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Autentication" asp-action="exit">Salir</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Autentication" asp-action="login">Iniciar sesion</a>
-                            </li>
-                        }
-                    </ul>
+
+        <div class="d-md-block d-none">
+            <div class="row margenes text-white" style="font-size: 2rem; background-color:#345101">
+                <div class="col-3 my-auto">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Forecast" asp-action="Index">
+                        <img src="~/img/logo.png" class="img-fluid ms-4" alt="logo" style="height:50px">
+                    </a>
+                </div>
+                <div class="col-6">
+                    <nav class="navbar navbar-expand-sm justify-content-center ">
+                        <ul class="navbar-nav">
+                            <li class="nav-item mx-3"><a class="nav-link text-white" asp-area="" asp-controller="Forecast" asp-action="Index">Home</a></li>
+                            <li class="nav-item mx-3"><a class="nav-link text-white" aria-current="page" href="#">Ver ciuad</a></li>
+                            <li class="nav-item mx-3"><a class="nav-link text-white" aria-current="page" href="#">Fecha</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-3 d-flex my-auto mx-0">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <h6 class="mx-2 my-auto col-6 text-end">@UserName</h6>
+                        <a asp-controller="Autentication" asp-action="exit" class="btn btn-success col-4 text-black">Sign Out</a>
+                        
+                    }else{
+                        <div class="col-6"></div>
+                        <a asp-controller="Autentication" asp-action="login" class="btn btn-success col-4 text-black">Login</a>
+                    }
+                    
                 </div>
             </div>
-        </nav>
+        </div>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -58,8 +60,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - PruebaBig_WIllianCuartas - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-white">
+            &copy; 2023 - Willian Ferney Curtas Mesa
         </div>
     </footer>
 
