--- a/PruebaBig_WIllianCuartas/Views/Autentication/login.cshtml
+++ b/PruebaBig_WIllianCuartas/Views/Autentication/login.cshtml
@@ -6,24 +6,31 @@
         @TempData["Message"]
     </div>
 }
+<div class="row">
+    <div class="col-4"></div>
+        <div class="col-4" style="font-size:2rem">
 
-<form method="post" asp-action="login" asp-controller="Autentication">
+        <form method="post" asp-action="login" asp-controller="Autentication">
 
-    <h1>
-        Login de usuario
-    </h1>
+            <h1 class="text-center">
+                Inicio de sesión
+            </h1>
 
 
-    <div class="form-group">
-        <label for="Email">Email</label>
-        <input type="text" class="form-control" id="Email" name="Email" value="@Model.Email" required />
-    </div>
+            <div class="form-group">
+                <label for="Email">Email</label>
+                <input  type="text" class="form-control tex" id="Email" name="Email" value="@Model.Email" required />
+            </div>
 
-    <div class="form-group">
-        <label for="Password">Contraseña:</label>
-        <input type="password" class="form-control" id="Password" name="Password" value="@Model.Password" required />
-    </div>
+            <div class="form-group">
+                <label for="Password">Contraseña:</label>
+                <input type="password" class="form-control tex" id="Password" name="Password" value="@Model.Password" required />
+            </div>
 
-    <button type="submit" class="btn btn-primary">iniciar</button>
+            <button style="font-size:2rem" type="submit" class="btn btn-success mt-3 px-5">Iniciar</button>
 
-</form>
+        </form>
+    
+        </div>
+    <div class="col-4"></div>
+</div>
