--- a/PruebaBig_WIllianCuartas/Views/Shared/_Layout.cshtml
+++ b/PruebaBig_WIllianCuartas/Views/Shared/_Layout.cshtml
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PruebaBig_WIllianCuartas.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 <body>
     <header>
@@ -29,11 +32,9 @@
                     </a>
                 </div>
                 <div class="col-6">
-                    <nav class="navbar navbar-expand-sm justify-content-center ">
+                    <nav class="navbar navbar-expand-sm justify-content-left ">
                         <ul class="navbar-nav">
                             <li class="nav-item mx-3"><a class="nav-link text-white" asp-area="" asp-controller="Forecast" asp-action="Index">Home</a></li>
-                            <li class="nav-item mx-3"><a class="nav-link text-white" aria-current="page" href="#">Ver ciuad</a></li>
-                            <li class="nav-item mx-3"><a class="nav-link text-white" aria-current="page" href="#">Fecha</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -53,8 +54,8 @@
         </div>
 
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div >
+        <main role="main" >
             @RenderBody()
         </main>
     </div>
